update: latest version

--- a/mini-chat/package.json
+++ b/mini-chat/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint \"js/**/*.js\"",
+    "format": "prettier --check \"js/**/*.js\"",
+    "format:write": "prettier --write \"js/**/*.js\""
   },
   "keywords": [],
   "author": "",
@@ -12,5 +15,11 @@
   "type": "commonjs",
   "dependencies": {
     "express": "^5.2.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "prettier": "^3.3.3"
   }
 }
